--- a/vlookup.Rmd
+++ b/vlookup.Rmd
@@ -93,7 +93,7 @@ my_ratings_with_more_info
 
 ---
 
-# But what is a VLOOKUP, really?
+# But what is VLOOKUP, really?
 
 --
 
@@ -130,6 +130,8 @@ left_join(my_ratings, office_ratings) %>% select(-imdb_rating, -total_votes)
 
 # Why use joins?
 
+--
+
 - You can join by multiple columns
   - In this example: No need to create a "s1e1" column to use as an id
 
@@ -147,6 +149,8 @@ left_join(my_ratings, office_ratings) %>% select(-imdb_rating, -total_votes)
 ---
 
 # Obstacle: What if the data is messier?
+
+--
 
 ```{r, load_schrute, eval=TRUE, include=FALSE}
 schrute_data <- schrute::theoffice
@@ -181,7 +185,7 @@ left_join(my_ratings, schrute_data_for_join)
 
 # Conclusion: How to do VLOOKUP in R
 
-- If you need to replicate VLOOKUP as close to the excel version as possible, use
+- If you need to replicate VLOOKUP as close to the excel version as possible, you can use
 the `VLOOKUP()` function from the `tidyquant` package.
 
 --
